--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,23 +1,44 @@
 ﻿l_english:
 
+
+    #Portugal
+    lusofonia.4.t: "Abdication of Emperor Pedro"
+    lusofonia.4.d: "Years of growing [ROOT.GetCountry.GetAdjective] influence in [SCOPE.sCountry('brazil_scope').GetName] have reshaped public sentiment on both sides of the Atlantic. Lusitanian identity, once subdued by separation, now surges openly in courts, salons, and streets alike. Faced with mounting pressure and a populace calling for reunion, Emperor Pedro has little choice but to abdicate, allowing [ROOT.GetCountry.GetName] and [SCOPE.sCountry('brazil_scope').GetName] to once more be bound together under a single crown."
+    lusofonia.4.f: "The pamphlets came first, then the rallies, and finally the silence of the palace. As the crowds gathered beneath fluttering green and red banners, the old divide between colony and kingdom felt suddenly distant—washed away by a shared tongue, faith, and memory."
+    lusofonia.4.a: "Let us bring a union between the Lusophone nations!"
+    modifier_regeneracao: "Regeneração"
+    regency.1.h: "We don't need a regency, let's keep Queen Maria as our monarch."
+    je_portugal_and_brazil_abdicate_pedro_button: "Encourage Emperor Pedro to Abdicate"
+    je_portugal_and_brazil_abdicate_pedro_button_desc:"Strong Portuguese influence over Brazil and the rise of Lusitanianism on both sides of the Atlantic have undermined Emperor Pedro’s position. As calls for unity grow louder, public pressure forces his abdication, clearing the path toward a personal union between Portugal and Brazil."
+   
+    #Spain
+    modifier_integrated_colony_overlord: "Colonies Financially Integrated"
+    je_hispanoamerica_improve_relations: "[ROOT.GetCountry.GetAdjective] [concept_relations] with #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#! improves by #g 50#!"
+    je_hispanoamerica_improve_leverage: "If we are the leader of a [concept_power_bloc], [ROOT.GetCountry.GetName] gains #positive_value 1000#! [concept_power_bloc_leverage] in #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#!"
+
+    #France
+    claims_on_algeria:0 "Claim Algeria"
+    claims_on_algeria_desc:0 "France gains claims on Algiers, Constantine and Oran. Starts "The Conquest of Algeria" journal entry."
     french_monarchy_timer_tt: "The following has been true for #b 3#! consecutive months (currently #v [ROOT.GetCountry.MakeScope.Var('french_timer_var').GetValue]#!):"
     french_monarchy_restoration_button:0 "Successfully Restored the Monarchy"
     french_monarchy_restoration_button_desc:0 "With the republican government dissolved, royal authority has been reinstated. The throne once again stands at the center of national leadership, promising stability after a period of uncertainty. Whether this renewed monarchy can maintain unity and confidence across the nation remains to be seen, but for now, the crown has returned to its rightful place."
     monarchist_restoration_modifier:0 "Restoration of the Monarchy"        
         
+    #Technocracy    
     technocracy_politics_tt: "[GetLawType('law_technocracy').GetName] [concept_law]"  
     technocracy_bureaucrats_tt: "[GetLawType('law_appointed_bureaucrats').GetName] [concept_law]"       
     technocracy_public_schools_tt: "[GetLawType('law_public_schools').GetName] [concept_law]"      
     technocracy_good_schools_laws_tt: "[GetLawType('law_compulsory_primary_school').GetName] [concept_law]"        
     technocracy_active_insurrection_tt: "[Concept('concept_insurrection', '$concept_insurrectionary$')] #tooltippable;tooltip:[GetPlayer.GetTooltipTag],liberal_movements_list_tt [Concept('concept_political_movement','$concept_political_movements$')]"
     
+    #Great Game
     start_great_game_rus:0 "Start the Great Game"
     start_great_game_rus_desc:0 "The balance of power in Asia is shifting. New alliances form, old spheres of influence crumble, and rival empires maneuver for supremacy from the steppes to the mountains. If we wish to secure our interests and shape the future of the region, we must step onto the geopolitical chessboard and start the Great Game."   
   
     start_great_game_gbr:0 "Start the Great Game"
     start_great_game_gbr_desc:0 "The balance of power in Asia is shifting. New alliances form, old spheres of influence crumble, and rival empires maneuver for supremacy from the steppes to the mountains. If we wish to secure our interests and shape the future of the region, we must step onto the geopolitical chessboard and start the Great Game."   
         
-    
+    #LF Subject
     law_laissez_faire_subject:0 "Monopoly Allowed"
     law_laissez_faire_subject_desc:0 "A liberal economy founded on the principles of comparative advantage and that fewer government interventions means greater growth. Except for foreign investment against our will."
     
@@ -26,7 +47,7 @@
     allow_monopoly_subject_remove:0 "Back to Regular Laissez-Faire"
     allow_monopoly_subject_remove_desc:0 "Even if we are a subject, having monopolies should not be allowed."
     
-    
+    #HBC
     HBC_disband.1.t:0 "The Future of Hudson’s Bay"
     HBC_disband.1.d:0 "The Hudson's Bay Company has reached the end of its political and economic viability. Questions arise now about who shall inherit its vast territories and resources."
     HBC_disband.1.f:0 "Once the mighty trader of the north, the Hudson's Bay Company shaped the destiny of Canada. Its time has now passed, and its legacy is up for division."
@@ -37,22 +58,23 @@
     concept_hudson_bay_company_desc:0 "HBC was granted a royal charter by King Charles II of England in 1670, giving it a monopoly over a vast territory that would later be known as Rupert's Land. For centuries, the company's primary business was the fur trade, especially for beavers, which were highly valued in Europe. The HBC played a major role in the exploration and development of what is now Canada. "
     british_hbc:0 "The Future of Hudson’s Bay"
     british_hbc_desc:0 "The Hudson's Bay Company has lost its former glory, a once-thriving company has become a shadow of its former self. The question is now what to do with it's former lands."
+    
+    #Alaska
     alk_breakup.1.z: "Return to the Motherland."
+    
+    #Russia
     crushed_central_asian_resistance: "Crushed Central Asian Resistance"
+    
+    #Ottoman 
     integrating_levant: "Reincorporating the Levant"
     integrating_egypt: "Reincorporating the Nile"    
-    canada_growth_modifier:0 "Canadian Expansion"
-    can_unified_canada_new:0 "Canadian Federation"
-
+    finish_tanzimats_button:0 "Complete the Tanzimat Reforms"
+    finish_tanzimats_button_desc:0 "The Tanzimat promised to renew the empire through modern laws, efficient administration, and equal rights for all subjects. With the final measures prepared, completing these reforms will strengthen central authority and signal the Ottoman Empire’s commitment to modernization. Though opposition remains, finishing the Tanzimat marks a decisive step toward a more resilient, modern state."
+    finish_tanzimats_button_possible_tt: "We must have completed at least #v 4#! of the 'Tanzimat' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
+    tanzimats_finished_effect_tt: "This will complete the #v $je_sick_man_main$#! [concept_journal_entry]."
+    finished_tanzimats_var_tt:0 "You have taken the #b Complete the Tanzimat Reforms#! decision."
     ottoman_egypt_annexation_button_name:0 "Revoking Egyptian Autonomy"
     ottoman_egypt_annexation_button_desc:0 "For decades, Egypt has operated with near-independence under its own ambitious rulers, drifting further from the authority of the Sublime Porte. Yet the empire cannot afford a rogue province at the crossroads of Africa, the Levant, and the Red Sea. By formally revoking Egypt’s autonomy and restoring direct Ottoman administration, Constantinople reasserts its historic rights and brings the Nile back under imperial control."
-    australia_growth_modifier:0 "Australian Expansion"
-    aus_unified_australia_new:0 "Australian Federation"
-
-    italian_idea_modifier:0 "Italian Idea"
-    italian_unifier_prestige_new:0 "Risorgimento"
-    italian_unifiers_ig_new:0 "Italian Unifiers"
-
     modifier_ottoman_reclaimed_syria:0 "Reclaimed Syria"
     modifier_ottoman_egypt:0 "Conquered Egypt"
     modifier_ottoman_urbanization:0 "Urbanization"
@@ -60,18 +82,27 @@
     modifier_ottoman_separatism:0 "Suppressed Separatism"
     modifier_ottoman_army_modernization:0 "Army Modernized"
     modifier_ottoman_bureaucratic_reform:0 "Bureaucratic Reform"
-    jap_mapi:0 "Japanese Internal Focus"
     
-    finish_tanzimats_button:0 "Complete the Tanzimat Reforms"
-    finish_tanzimats_button_desc:0 "The Tanzimat promised to renew the empire through modern laws, efficient administration, and equal rights for all subjects. With the final measures prepared, completing these reforms will strengthen central authority and signal the Ottoman Empire’s commitment to modernization. Though opposition remains, finishing the Tanzimat marks a decisive step toward a more resilient, modern state."
-    finish_tanzimats_button_possible_tt: "We must have completed at least #v 4#! of the 'Tanzimat' [Concept('concept_journal_entry', '$concept_journal_entries$')]"
-    tanzimats_finished_effect_tt: "This will complete the #v $je_sick_man_main$#! [concept_journal_entry]."
-    finished_tanzimats_var_tt:0 "You have taken the #b Complete the Tanzimat Reforms#! decision."
-    
+    #Australia and Canada  
+    canada_growth_modifier:0 "Canadian Expansion"
+    can_unified_canada_new:0 "Canadian Federation"
+    australia_growth_modifier:0 "Australian Expansion"
+    aus_unified_australia_new:0 "Australian Federation"
+
+    #Itly
+    italian_idea_modifier:0 "Italian Idea"
+    italian_unifier_prestige_new:0 "Risorgimento"
+    italian_unifiers_ig_new:0 "Italian Unifiers"   
     modifier_risorgimento_je:0 "Risorgimento"
 
+    #Japan
+    jap_mapi:0 "Japanese Internal Focus"
+    
+
+    #America
     modifier_america_migration:0 "American Migration"
 
+    #Germany
     je_north_german_fed_pu:0 "North German Confederation"
     je_north_german_fed_pu_reason:0 "After the defeat against Austria, the North German states attempt to unite. We must strive to be the foremost power in northern Germany, so that the people still look to us as champions of the cause."
     # je_north_german_status:1 "The North German minor nations will unify with us if we can become the sole [concept_unification_candidate]."
@@ -86,15 +117,12 @@
     # Landowners IG Traits
     ig_trait_jap_noblesse_oblige:0 "Shogun's Treasury"
     ig_trait_jap_noblesse_oblige_desc:0 "The Shogun shall lend a hand in the development of the country by investing in its economy."
-
-
     ideology_paternalistic_eic:0 "Paternalistic"
   
+    #China
     modifier_high_pop_authority:0 " High population"
 
-    claims_on_algeria:0 "Claim Algeria"
-    claims_on_algeria_desc:0 "France gains claims on Algiers, Constantine and Oran. Starts "The Conquest of Algeria" journal entry."
-
+    #Automatic Privatization
     automatic_privatization_decision_enable:0 "Enable Automatic Privatization"
     automatic_privatization_decision_enable_desc:0 "Enables Automatic Privatization"
     automatic_privatization_decision_remove:0 "Disable Automatic Privatization"
@@ -103,17 +131,17 @@
 
     pm_improved_steam_engines:0 "Improved Steam Engines"
 
-    
+    #Persia
     persia_events.1.e:0 "The east must be brought into our sphere."
     persia_events.1.g:0 "The north will fall to us."
 
 
-    # civil war replacement
+    #American Civil War
     mpbe_ACW_DIXIE_STATES_HEADER: "All of these [Concept('concept_state', '$concept_states$')] are [Concept('concept_incorporated_state','$concept_incorporated$')] and have at least [GetPlayer.MakeScope.ScriptValue('acw_reincorporate_dixie_radical_min')|0v%] [GetCulture('dixie').GetName] [Concept('concept_radical', '$concept_radicals$')]:"
     mpbe_ACW_DIXIE_STATES_LIST_ENTRY: "[THIS.GetState.GetName]: $concept_incorporated$: [SelectLocalization(THIS.GetState.IsIncorporated,'@green_checkmark_box!','@simple_box!')] $dixie$ $concept_radicals$: [SelectLocalization(LessThanOrEqualTo_CFixedPoint(THIS.ScriptValue('dixie_radical_fraction'), THIS.ScriptValue('acw_reincorporate_dixie_radical_min') ),'@green_checkmark_box!','@simple_box!')] ([THIS.ScriptValue('dixie_radical_fraction')|%+1])"
     mpbe_ACW_REINCORPORATE_TT: "$mpbe_ACW_DIXIE_STATES_HEADER$\n[GetScriptedGui('je_acw_reincoprorate_states_sgui').ExecuteTooltip(GuiScope.SetRoot(ROOT.GetCountry.MakeScope).End)]"
     
-    # austrian content localization
+    #Austria
     austria_guide.1.t: "The Matter of Hungary"
     austria_guide.1.d: "As nationalism spreads across Europe, voices within [SCOPE.sCountry('hungary_scope').GetNameNoFlag] increasingly call for a distinct Magyar identity and greater autonomy, threatening the stability of the realm. [SCOPE.sCountry('hungary_scope').GetAdjectiveNoFlag] leaders flirt with nationalist rhetoric that could undermine imperial unity if allowed to grow unchecked. To preserve cohesion and prevent separatist momentum, [SCOPE.GetRootScope.GetCountry.GetNameNoFlag] must act swiftly to bring [SCOPE.sCountry('hungary_scope').GetNameNoFlag] fully and firmly within the [SCOPE.GetRootScope.GetCountry.GetAdjectiveNoFlag] fold before this rising sentiment turns into a bid for independence."
     austria_guide.1.f:1 "We must ensure the loyalty of the Hungarians, one way or another."
