spain guide + bug fixes

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -12,6 +12,11 @@
     je_portugal_and_brazil_abdicate_pedro_button_desc:"Strong Portuguese influence over Brazil and the rise of Lusitanianism on both sides of the Atlantic have undermined Emperor Pedro’s position. As calls for unity grow louder, public pressure forces his abdication, clearing the path toward a personal union between Portugal and Brazil."
    
     #Spain
+    spain_guide.1.t: "Hispanoamerica vs. Reconquista"
+    spain_guide.1.d: "With the loss of [ROOT.GetCountry.GetNameNoFlag]’s American dominions still a fresh wound upon the national conscience, the question of our relationship with the former colonies can no longer be ignored. Should [ROOT.GetCountry.GetNameNoFlag] reconcile with her former colonies, or seek to reclaim them by force?"
+    spain_guide.1.f: "Some argue that the age of empire in the New World has passed, and that recognition, commerce, and diplomacy offer a path to renewed influence without bloodshed. Others insist that Spain’s authority was stolen during a moment of weakness, and that only a determined #bold $je_reconquista$#! can restore honor, prestige, and rightful rule across Hispanoamerica. The decision we make will determine whether Spain looks forward as a diplomatic power or backward as a revanchist empire."
+    spain_guide.1.a: "In order to normalize relations with Hispanoamerica, we must stay as #bold Isabelline [ROOT.GetCountry.GetName]#!.
+    spain_guide.1.b: "The #bold [SCOPE.sCountry('carlist_scope').GetAdjective]#! path of #bold Reconquista#! is more favorable."
     modifier_integrated_colony_overlord: "Colonies Financially Integrated"
     je_hispanoamerica_improve_relations: "[ROOT.GetCountry.GetAdjective] [concept_relations] with #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#! improves by #g 50#!"
     je_hispanoamerica_improve_leverage: "If we are the leader of a [concept_power_bloc], [ROOT.GetCountry.GetName] gains #positive_value 1000#! [concept_power_bloc_leverage] in #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#!"
