--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,7 +1,29 @@
 ﻿l_english:
 
+    #Enforce PU Diplo Play
+    dp_enforce_pu: "$war_goal_enforce_pu_type_name$"
+    dp_enforce_pu_tooltip: "#header Start a $dp_enforce_pu$ [concept_diplomatic_play]#!\n$TOOLTIP_DELIMITER$\n$dp_enforce_pu_desc$"
+    dp_enforce_pu_desc: "Sets the initiating [concept_war_goal] to force the targeted [concept_country] to become your [concept_personal_union]."
+
+    war_goal_enforce_pu_type_name: "Enforce Personal Union"
+    war_goal_enforce_pu_type_desc: "Force another [concept_country] to become a [concept_personal_union]."
+    war_goal_enforce_pu: "[WAR_GOAL_DRAFT.GetTarget.GetName] [concept_personal_union]"
+    war_goal_enforce_pu_desc: "[WAR_GOAL_DRAFT.GetHolder.GetName] forces [WAR_GOAL_DRAFT.GetTarget.GetName] to become a [concept_personal_union]."
 
     #Portugal
+    integrate_brazil_por:0 "Integrate Brazil"
+    integrate_brazil_por_desc:0 "With #v $BRZ$#! firmly under the authority of #v $POR$#!, the time has come to complete its reintegration into the realm. Through administrative reform and direct governance, $BRZ_ADJ$ lands will be fully incorporated, ending any remaining distinction between colony and metropole."
+    integrating_brazil: "Reincorporating Brazil"
+    annex_brazil_por:0 "Annex Brazil"
+    annex_brazil_por_desc:0 "With #v $BRZ$#! bound to the $POR_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $BRZ$#! directly into the realm, extinguishing the last remnants of colonial secession and securing the empire as one."
+    brazil_infamy_decrease:0 "Less Infamy for Brazil"
+    lusofonia.3.d_2:0 "[SCOPE.sCountry('brazil_scope').GetName] has been forced back beneath the [ROOT.GetCountry.GetAdjective] crown. Through war and determination, the loss of empire has been reversed and a personal union restored."
+    invade_brazil_button:0 "Invade Brazil"
+    invade_brazil_button_desc:0 "Diplomacy has failed to resolve the humiliation of #bold Brazil’s#! secession. Only force of arms can restore [ROOT.GetCountry.GetAdjective] authority and bring the lost colony back under the crown."
+    je_portuguese_reconquista: "The Lost Colony"
+    je_portuguese_reconquista_reason:"[SCOPE.sCountry('brazil_scope').GetName]’s secession was not the result of rightful self-determination, but of weakness and compromise forced upon the crown in an age of turmoil. Once the jewel of the [ROOT.GetCountry.GetAdjective] Empire, #bold Brazil#! was built by Lisbon’s blood, capital, and authority — and its continued independence stands as a living reminder of imperial decline. If #bold Portugal #!is to reclaim its place among the great powers, it must confront this humiliation directly and restore sovereignty over lands that were never meant to be lost."
+    por_power_greater_or_equal_brz_tt: "The [concept_prestige], Army [concept_power_projection], and Navy [concept_power_projection] of [ROOT.GetCountry.GetName] is greater than or equal to those of [SCOPE.sCountry('brazil_scope').GetName]"
+    ip4_coup.2.c: "Let us put a [GetIdeology('ideology_miguelist').GetName] claimant to the throne of [ROOT.GetCountry.GetName]!"
     lusofonia.4.t: "Abdication of Emperor Pedro"
     lusofonia.4.d: "Years of growing [ROOT.GetCountry.GetAdjective] influence in [SCOPE.sCountry('brazil_scope').GetName] have reshaped public sentiment on both sides of the Atlantic. Lusitanian identity, once subdued by separation, now surges openly in courts, salons, and streets alike. Faced with mounting pressure and a populace calling for reunion, Emperor Pedro has little choice but to abdicate, allowing [ROOT.GetCountry.GetName] and [SCOPE.sCountry('brazil_scope').GetName] to once more be bound together under a single crown."
     lusofonia.4.f: "The pamphlets came first, then the rallies, and finally the silence of the palace. As the crowds gathered beneath fluttering green and red banners, the old divide between colony and kingdom felt suddenly distant—washed away by a shared tongue, faith, and memory."
@@ -12,6 +34,14 @@
     je_portugal_and_brazil_abdicate_pedro_button_desc:"Strong Portuguese influence over Brazil and the rise of Lusitanianism on both sides of the Atlantic have undermined Emperor Pedro’s position. As calls for unity grow louder, public pressure forces his abdication, clearing the path toward a personal union between Portugal and Brazil."
    
     #Spain
+    one_true_culture: "One True Culture"
+    je_regime_change_portugal_button:0 "Force Regime Change in Portugal"
+    je_regime_change_portugal_button_desc:0 "#b $POR$#!'s current government stands in the way of Iberian stability and alignment. By exerting overwhelming political and military pressure, we can compel a change of regime and bring Lisbon’s governance into line with our interests."
+    spa_power_greater_or_equal_tt: "The [concept_prestige], Army [concept_power_projection], and Navy [concept_power_projection] of [ROOT.GetCountry.GetName] is greater than or equal to those of #b $POR$#!"
+    je_active_for_more_than_two_years_tt: "This [concept_journal_entry] has been active for more than #v 2 years#!"
+    je_spread_iberianism_button:0 "Promote Iberianism"
+    je_spread_iberianism_button_desc:0 "Encourage the spread of Iberianist thought within Portugal, fostering a shared national identity that transcends borders and prepares the ground for closer political unity."
+    every_state_iberia_tt: "Every [GetCulture('spanish').GetName] [Concept('concept_homeland','$concept_homelands$')] in [GetGeographicRegion('geographic_region_iberia').GetName] will get the following modifier:"
     spain_guide.1.t: "Hispanoamerica vs. Reconquista"
     spain_guide.1.d: "With the loss of [ROOT.GetCountry.GetNameNoFlag]’s American dominions still a fresh wound upon the national conscience, the question of our relationship with the former colonies can no longer be ignored. Should [ROOT.GetCountry.GetNameNoFlag] reconcile with her former colonies, or seek to reclaim them by force?"
     spain_guide.1.f: "Some argue that the age of empire in the New World has passed, and that recognition, commerce, and diplomacy offer a path to renewed influence without bloodshed. Others insist that Spain’s authority was stolen during a moment of weakness, and that only a determined #bold $je_reconquista$#! can restore honor, prestige, and rightful rule across Hispanoamerica. The decision we make will determine whether Spain looks forward as a diplomatic power or backward as a revanchist empire."
@@ -20,6 +50,8 @@
     modifier_integrated_colony_overlord: "Colonies Financially Integrated"
     je_hispanoamerica_improve_relations: "[ROOT.GetCountry.GetAdjective] [concept_relations] with #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#! improves by #g 50#!"
     je_hispanoamerica_improve_leverage: "If we are the leader of a [concept_power_bloc], [ROOT.GetCountry.GetName] gains #positive_value 1000#! [concept_power_bloc_leverage] in #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#!"
+    spain_elected_bureaucrats_tt: "having [GetLawType('law_elected_bureaucrats').GetName] [concept_law]"    
+    spain_right_of_assembly_tt: "having [GetLawType('law_right_of_assembly').GetName] [concept_law]"  
 
     #France
     claims_on_algeria:0 "Claim Algeria"
