--- a/localization/french/war_exhaustion_l_french.yml
+++ b/localization/french/war_exhaustion_l_french.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "Libérer [WAR_GOAL_DRAFT.GetCountryCreation.GetName] comme vassal [WAR_GOAL_DRAFT.GetHolder.GetAdjective]"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] force [WAR_GOAL_DRAFT.GetTarget.GetName] à libérer le [concept_country] de [WAR_GOAL_DRAFT.GetCountryCreation.GetName] qui deviendra un [concept_subject] [WAR_GOAL_DRAFT.GetHolder.GetAdjective].\n\n#title Les [Concept('concept_state', '$concept_states$')] suivants seront libérés:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Essayez de convaincre [WAR_GOAL_DRAFT.GetHolder.GetName] de se joindre à votre camp en forçant [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] à libérer [WAR_GOAL_DRAFT.GetCountryCreation.GetName] comme [concept_subject]."
+ demilitarised_modifier: "Démilitarisé"
+ WADDLE_INFAMY_PLACEHOLDER: "Espace réservé\n#v SERA CALCULÉ APRÈS APPLICATION"
