--- a/localization/german/war_exhaustion_l_german.yml
+++ b/localization/german/war_exhaustion_l_german.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "[WAR_GOAL_DRAFT.GetCountryCreation.GetName] als [WAR_GOAL_DRAFT.GetHolder.GetAdjective] Vasall befreien"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] zwingt [WAR_GOAL_DRAFT.GetTarget.GetName], das [concept_country] [WAR_GOAL_DRAFT.GetCountryCreation.GetName] freizugeben, das ein [WAR_GOAL_DRAFT.GetHolder.GetAdjective] [concept_subject] werden wird.\n\n#title Die folgenden [Concept('concept_state', '$concept_states$')] werden befreit:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Versuchen Sie, [WAR_GOAL_DRAFT.GetHolder.GetName] zu überzeugen, sich Ihrer Seite anzuschließen, indem Sie [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] zwingen, [WAR_GOAL_DRAFT.GetCountryCreation.GetName] als [concept_subject] freizugeben."
+ demilitarised_modifier: "Entmilitarisiert"
+ WADDLE_INFAMY_PLACEHOLDER: "Platzhalter\n#v WIRD NACH DURCHSETZUNG BERECHNET"
