--- a/localization/japanese/war_exhaustion_l_japanese.yml
+++ b/localization/japanese/war_exhaustion_l_japanese.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "[WAR_GOAL_DRAFT.GetCountryCreation.GetName]を[WAR_GOAL_DRAFT.GetHolder.GetAdjective]従属国として解放"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName]は[WAR_GOAL_DRAFT.GetTarget.GetName]に[WAR_GOAL_DRAFT.GetCountryCreation.GetName]の[concept_country]を解放させ、[WAR_GOAL_DRAFT.GetHolder.GetAdjective]の[concept_subject]とします。\n\n#title 以下の[Concept('concept_state', '$concept_states$')]が解放されます：#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "[WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName]に[WAR_GOAL_DRAFT.GetCountryCreation.GetName]を[concept_subject]として解放させることで、[WAR_GOAL_DRAFT.GetHolder.GetName]を味方に引き入れるよう説得してください。"
+ demilitarised_modifier: "非軍事化済み"
+ WADDLE_INFAMY_PLACEHOLDER: "仮表示\n#v 強制後に計算されます"
