--- a/localization/korean/war_exhaustion_l_korean.yml
+++ b/localization/korean/war_exhaustion_l_korean.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "[WAR_GOAL_DRAFT.GetCountryCreation.GetName]를 [WAR_GOAL_DRAFT.GetHolder.GetAdjective] 속국으로 해방"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName]는 [WAR_GOAL_DRAFT.GetTarget.GetName]에게 [WAR_GOAL_DRAFT.GetCountryCreation.GetName]의 [concept_country]를 해방하도록 강제하며, 이는 [WAR_GOAL_DRAFT.GetHolder.GetAdjective] [concept_subject]가 될 것입니다.\n\n#title 다음 [Concept('concept_state', '$concept_states$')]가 해방됩니다:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "[WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName]에게 [WAR_GOAL_DRAFT.GetCountryCreation.GetName]를 [concept_subject]로 해방하도록 강제하여 [WAR_GOAL_DRAFT.GetHolder.GetName]를 당신 편에 서도록 설득하세요."
+ demilitarised_modifier: "비무장화됨"
+ WADDLE_INFAMY_PLACEHOLDER: "임시 표시\n#v 시행 후 계산됩니다"
