--- a/localization/polish/war_exhaustion_l_polish.yml
+++ b/localization/polish/war_exhaustion_l_polish.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "Wyzwolić [WAR_GOAL_DRAFT.GetCountryCreation.GetName] jako wasal [WAR_GOAL_DRAFT.GetHolder.GetAdjective]"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] wymusza na [WAR_GOAL_DRAFT.GetTarget.GetName] uwolnienie [concept_country] [WAR_GOAL_DRAFT.GetCountryCreation.GetName], który stanie się [concept_subject] [WAR_GOAL_DRAFT.GetHolder.GetAdjective].\n\n#title Następujące [Concept('concept_state', '$concept_states$')] zostaną wyzwolone:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Spróbuj przekonać [WAR_GOAL_DRAFT.GetHolder.GetName] do przyłączenia się do twojej strony, wymuszając na [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] uwolnienie [WAR_GOAL_DRAFT.GetCountryCreation.GetName] jako [concept_subject]."
+ demilitarised_modifier: "Zdemilitaryzowany"
+ WADDLE_INFAMY_PLACEHOLDER: "Zastępczy tekst\n#v ZOSTANIE OBLICZONE PO WYMUSZENIU"
