--- a/localization/russian/war_exhaustion_l_russian.yml
+++ b/localization/russian/war_exhaustion_l_russian.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "Выделить [WAR_GOAL_DRAFT.GetCountryCreation.GetName] как вассал [WAR_GOAL_DRAFT.GetHolder.GetAdjective]"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] принуждает [WAR_GOAL_DRAFT.GetTarget.GetName] освободить [concept_country] [WAR_GOAL_DRAFT.GetCountryCreation.GetName], который станет [WAR_GOAL_DRAFT.GetHolder.GetAdjective] [concept_subject].\n\n#title Следующие [Concept('concept_state', '$concept_states$')] будут освобождены:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Попытайтесь убедить [WAR_GOAL_DRAFT.GetHolder.GetName] присоединиться к вашей стороне, принудив [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] освободить [WAR_GOAL_DRAFT.GetCountryCreation.GetName] в качестве [concept_subject]."
+ demilitarised_modifier: "Демилитаризованный"
+ WADDLE_INFAMY_PLACEHOLDER: "Заполнитель\n#v БУДЕТ РАССЧИТАНО ПОСЛЕ ПРИМЕНЕНИЯ"
