--- a/localization/simp_chinese/war_exhaustion_l_simp_chinese.yml
+++ b/localization/simp_chinese/war_exhaustion_l_simp_chinese.yml
@@ -91,3 +91,5 @@
  war_goal_liberate_country_as_subject:0 "解放[WAR_GOAL_DRAFT.GetCountryCreation.GetName]作为[WAR_GOAL_DRAFT.GetHolder.GetAdjective]附庸"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName]强制[WAR_GOAL_DRAFT.GetTarget.GetName]释放[WAR_GOAL_DRAFT.GetCountryCreation.GetName]的[concept_country]，该国将成为[WAR_GOAL_DRAFT.GetHolder.GetAdjective]的[concept_subject]。\n\n#title 以下[Concept('concept_state', '$concept_states$')]将被解放：#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "通过强制[WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName]将[WAR_GOAL_DRAFT.GetCountryCreation.GetName]作为[concept_subject]释放，尝试说服[WAR_GOAL_DRAFT.GetHolder.GetName]加入你方。"
+ demilitarised_modifier: "已非军事化"
+ WADDLE_INFAMY_PLACEHOLDER: "占位符\n#v 将在强制执行后计算"
