--- a/localization/spanish/war_exhaustion_l_spanish.yml
+++ b/localization/spanish/war_exhaustion_l_spanish.yml
@@ -78,3 +78,5 @@
  war_goal_liberate_country_as_subject:0 "Liberar [WAR_GOAL_DRAFT.GetCountryCreation.GetName] como vasallo [WAR_GOAL_DRAFT.GetHolder.GetAdjective]"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] obliga a [WAR_GOAL_DRAFT.GetTarget.GetName] a liberar el [concept_country] de [WAR_GOAL_DRAFT.GetCountryCreation.GetName] que se convertirá en un [concept_subject] [WAR_GOAL_DRAFT.GetHolder.GetAdjective].\n\n#title Los siguientes [Concept('concept_state', '$concept_states$')] serán liberados:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Intente convencer a [WAR_GOAL_DRAFT.GetHolder.GetName] para que se una a su lado obligando a [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] a liberar [WAR_GOAL_DRAFT.GetCountryCreation.GetName] como [concept_subject]."
+ demilitarised_modifier: "Desmilitarizado"
+ WADDLE_INFAMY_PLACEHOLDER: "Marcador de posición\n#v SE CALCULARÁ DESPUÉS DE APLICARSE"
