--- a/localization/turkish/war_exhaustion_l_turkish.yml
+++ b/localization/turkish/war_exhaustion_l_turkish.yml
@@ -85,3 +85,5 @@
  war_goal_liberate_country_as_subject:0 "[WAR_GOAL_DRAFT.GetCountryCreation.GetName]'ı [WAR_GOAL_DRAFT.GetHolder.GetAdjective] Vassalı Olarak Özgürleştir"
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName], [WAR_GOAL_DRAFT.GetTarget.GetName]'i [WAR_GOAL_DRAFT.GetCountryCreation.GetName] [concept_country]'sini serbest bırakmaya zorlar ve bu [WAR_GOAL_DRAFT.GetHolder.GetAdjective] [concept_subject] haline gelecektir.\n\n#title Aşağıdaki [Concept('concept_state', '$concept_states$')] özgürleştirilecek:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName]'i tarafınıza katılmaya ikna etmek için [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName]'i [WAR_GOAL_DRAFT.GetCountryCreation.GetName]'ı [concept_subject] olarak serbest bırakmaya zorlayın."
+ demilitarised_modifier: "Askerden Arındırılmış"
+ WADDLE_INFAMY_PLACEHOLDER: "Yer tutucu\n#v UYGULANDIKTAN SONRA HESAPLANACAK"
