--- a/localization/english/war_exhaustion_l_english.yml
+++ b/localization/english/war_exhaustion_l_english.yml
@@ -97,4 +97,4 @@
  war_goal_liberate_country_as_subject_desc:0 "[WAR_GOAL_DRAFT.GetHolder.GetName] forces [WAR_GOAL_DRAFT.GetTarget.GetName] to release the [concept_country] of [WAR_GOAL_DRAFT.GetCountryCreation.GetName] which will become a [WAR_GOAL_DRAFT.GetHolder.GetAdjective] [concept_subject].\n\n#title The following [Concept('concept_state', '$concept_states$')] will be liberated:#!#indent_newline:3 \n[WAR_GOAL_DRAFT.GetCountryCreation.ListReleasableStates( WAR_GOAL_DRAFT.GetTarget )]#!"
  war_goal_liberate_country_as_subject_sway_desc:0 "Try to convince [WAR_GOAL_DRAFT.GetHolder.GetName] to join your side by forcing [WAR_GOAL_DRAFT.GetWarGoalStakeholder.GetName] to release [WAR_GOAL_DRAFT.GetCountryCreation.GetName] as a [concept_subject]."
  demilitarised_modifier: "Demilitarised"
- WADDLE_INFAMY_PLACEHOLDER: "Placeholder\n#v WILL BE CALCAULTED AFTER IT IS ENFORCED"
+ WADDLE_INFAMY_PLACEHOLDER: "Placeholder\n#red Infamy will be calculated after it is enforced#!"
