--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -11,9 +11,7 @@
     war_goal_enforce_pu_desc: "[WAR_GOAL_DRAFT.GetHolder.GetName] forces [WAR_GOAL_DRAFT.GetTarget.GetName] to become a [concept_personal_union]."
 
     #Portugal
-    integrate_brazil_por:0 "Integrate Brazil"
-    integrate_brazil_por_desc:0 "With #v $BRZ$#! firmly under the authority of #v $POR$#!, the time has come to complete its reintegration into the realm. Through administrative reform and direct governance, $BRZ_ADJ$ lands will be fully incorporated, ending any remaining distinction between colony and metropole."
-    integrating_brazil: "Reincorporating Brazil"
+    has_reconquista_je_tt: "Has the #v $je_portuguese_reconquista$#! [concept_journal_entry]"
     annex_brazil_por:0 "Annex Brazil"
     annex_brazil_por_desc:0 "With #v $BRZ$#! bound to the $POR_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $BRZ$#! directly into the realm, extinguishing the last remnants of colonial secession and securing the empire as one."
     brazil_infamy_decrease:0 "Less Infamy for Brazil"
@@ -54,6 +52,7 @@
     spain_right_of_assembly_tt: "having [GetLawType('law_right_of_assembly').GetName] [concept_law]"  
 
     #France
+    je_the_algerian_departements_tyrone_tt: "The [SCOPE.sCulture('french_culture_scope').GetName] [Concept('concept_pop','$concept_population$')|l] of either [SCOPE.sState('je_algiers_state_scope').GetStateRegion.GetName], [SCOPE.sState('je_oran_state_scope').GetStateRegion.GetName], or [SCOPE.sState('je_constantine_state_scope').GetStateRegion.GetName] is greater than or equal to #bold 10%#!."
     claims_on_algeria:0 "Claim Algeria"
     claims_on_algeria_desc:0 "France gains claims on Algiers, Constantine and Oran. Starts "The Conquest of Algeria" journal entry."
     french_monarchy_timer_tt: "The following has been true for #b 3#! consecutive months (currently #v [ROOT.GetCountry.MakeScope.Var('french_timer_var').GetValue]#!):"
