spain morocco fix

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
 
+    #Synthetics Company
+    company_synth_oil_dynamic_name_tag_singular: "Synthetic"
+    company_synth_oil_dynamic_name_tag_plural: "Synthetics"
+
     #Enforce PU Diplo Play
     dp_enforce_pu: "$war_goal_enforce_pu_type_name$"
     dp_enforce_pu_tooltip: "#header Start a $dp_enforce_pu$ [concept_diplomatic_play]#!\n$TOOLTIP_DELIMITER$\n$dp_enforce_pu_desc$"
